--- a/popup.html
+++ b/popup.html
@@ -90,9 +90,7 @@
 		</style>
 	</head>
 	<body>
-		<div id="buttonList">
-			
-		</div>
+		<div id="buttonList"></div>
 		<script src="popup.js"></script>
 	</body>
 </html>
